# AI-Personal-Assistant

./: .env.example  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  PROJECT_GUIDE.md  README.md  RESTRUCTURING_COMPLETE.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.ps1  start.py  stop-servers.ps1  test_mcp.py
backend/: __init__.py
backend/ai_engine/: __init__.py  main.py
backend/ai_engine/app/core/: config.py
backend/ai_engine/app/routers/: chat.py
backend/ai_engine/app/services/: mcp_client.py  nlu_service.py
backend/mcp_servers/: __init__.py
backend/mcp_servers/core/: config.py
backend/mcp_servers/servers/: amazon_server.py  banking_server.py  zomato_server.py
